website/versioned_docs/version-1.3.0/tutorials/getting_started/index.mdx
---
title: Getting Started with Ax
sidebar_label: Getting Started with Ax
---

import LinkButtons from "@site/src/components/LinkButtons.jsx";
import CellOutput from "@site/src/components/CellOutput.jsx";
import {PlotlyFigure} from "@site/src/components/Plotting.jsx";

<LinkButtons
  githubUrl="https://github.com/facebook/ax/blob/main/tutorials/getting_started/getting_started.ipynb"
  colabUrl="https://colab.research.google.com/github/facebook/ax/blob/main/tutorials/getting_started/getting_started.ipynb"
/>

# Getting Started with Ax

Complex optimization problems where we wish to tune multiple parameters to improve
metric performance, but the inter-parameter interactions are not fully understood, are
common across various fields including machine learning, robotics, materials science,
and chemistry. This category of problem is known as "black-box" optimization. The
complexity of black-box optimization problems further increases if evaluations are
expensive to conduct, time-consuming, or noisy.

We can use Ax to efficiently conduct an experiment in which we "ask" for candidate
points to evaluate, "tell" Ax the results, and repeat. We'll uses Ax's `Client`, a tool
for managing the state of our experiment, and we'll learn how to define an optimization
problem, configure an experiment, run trials, analyze results, and persist the
experiment for later use using the `Client`.

Because Ax is a black box optimizer, we can use it to optimize any arbitrary function.
In this example we will minimize the
[Hartmann6 function](https://www.sfu.ca/~ssurjano/hart6.html), a complicated
6-dimensional function with multiple local minima. Hartmann6 is a challenging benchmark
for optimization algorithms commonly used in the global optimization literature -- it
tests the algorithm's ability to identify the true global minimum, rather than
mistakenly converging on a local minimum. Looking at its analytic form we can see that
it would be incredibly challenging to efficiently find the global minimum either by
manual trial-and-error or traditional design of experiments like grid-search or
random-search.

$$

f(\mathbf{x})=-\sum_{i=1}^4 \alpha_i \exp \left(-\sum_{j=1}^6 A_{i j}\left(x_j-P_{i j}\right)^2\right)

$$

### Learning Objectives

- Understand the basic concepts of black box optimization
- Learn how to define an optimization problem using Ax
- Configure and run an experiment using Ax's `Client`
- Analyze the results of the optimization

### Prerequisites

- Familiarity with Python and basic programming concepts
- Understanding of [adaptive experimentation](../../intro-to-ae.mdx) and
  [Bayesian optimization](../../intro-to-bo.mdx)

## Step 1: Import Necessary Modules

First, ensure you have all the necessary imports:

```python
import numpy as np
from ax.api.client import Client
from ax.api.configs import RangeParameterConfig
```

<CellOutput>
{
`[INFO 06-04 15:50:44] ax.storage.sqa_store.with_db_settings_base: Ax SQL storage initialized with SQLAlchemy 1.4.17`
}
</CellOutput>

## Step 2: Initialize the Client

Create an instance of the `Client` to manage the state of your experiment.

```python
client = Client()
```

## Step 3: Configure the Experiment

The `Client` instance can be configured with a series of `Config`s that define how the
experiment will be run.

The Hartmann6 problem is usually evaluated on the hypercube $x_i \in (0, 1)$, so we will
define six identical `RangeParameterConfig`s with these bounds.

You may specify additional features like parameter constraints to further refine the
search space and parameter scaling to help navigate parameters with nonuniform effects.

```python
# Define six float parameters x1, x2, x3, ... for the Hartmann6 function, which is typically evaluated on the unit hypercube
parameters = [
    RangeParameterConfig(
        name="x1", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x2", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x3", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x4", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x5", parameter_type="float", bounds=(0, 1)
    ),
    RangeParameterConfig(
        name="x6", parameter_type="float", bounds=(0, 1)
    ),
]

client.configure_experiment(parameters=parameters)
```

## Step 4: Configure Optimization

Now, we must configure the objective for this optimization, which we do using
`Client.configure_optimization`. This method expects a string `objective`, an expression
containing either a single metric to maximize, a linear combination of metrics to
maximize, or a tuple of multiple metrics to jointly maximize. These expressions are
parsed using [SymPy](https://www.sympy.org/en/index.html). For example:

- `"score"` would direct Ax to maximize a metric named score
- `"-loss"` would direct Ax to Ax to minimize a metric named loss
- `"task_0 + 0.5 * task_1"` would direct Ax to maximize the sum of two task scores,
  downweighting task_1 by a factor of 0.5
- `"score, -flops"` would direct Ax to simultaneously maximize score while minimizing
  flops

See these recipes for more information on configuring
[objectives](../../recipes/multi-objective-optimization) and
[outcome constraints](../../recipes/outcome-constraints).

```python
metric_name = "hartmann6" # this name is used during the optimization loop in Step 5
objective = f"-{metric_name}" # minimization is specified by the negative sign

client.configure_optimization(objective=objective)
```

## Step 5: Run Trials

Here, we will configure the ask-tell loop.

We begin by defining the Hartmann6 function as written above. Remember, this is just an
example problem and any Python function can be substituted here.

```python
# Hartmann6 function
def hartmann6(x1, x2, x3, x4, x5, x6):
    alpha = np.array([1.0, 1.2, 3.0, 3.2])
    A = np.array([
        [10, 3, 17, 3.5, 1.7, 8],
        [0.05, 10, 17, 0.1, 8, 14],
        [3, 3.5, 1.7, 10, 17, 8],
        [17, 8, 0.05, 10, 0.1, 14]
    ])
    P = 10**-4 * np.array([
        [1312, 1696, 5569, 124, 8283, 5886],
        [2329, 4135, 8307, 3736, 1004, 9991],
        [2348, 1451, 3522, 2883, 3047, 6650],
        [4047, 8828, 8732, 5743, 1091, 381]
    ])

    outer = 0.0
    for i in range(4):
        inner = 0.0
        for j, x in enumerate([x1, x2, x3, x4, x5, x6]):
            inner += A[i, j] * (x - P[i, j])**2
        outer += alpha[i] * np.exp(-inner)
    return -outer

hartmann6(0.1, 0.45, 0.8, 0.25, 0.552, 1.0)
```

<CellOutput>
{
`np.float64(-0.4878737485613134)`
}
</CellOutput>

### Optimization Loop

We will iteratively call `client.get_next_trials` to "ask" Ax for a parameterization to
evaluate, then call `hartmann6` using those parameters, and finally "tell" Ax the result
using `client.complete_trial`.

This loop will run multiple trials to optimize the function.

```python
for _ in range(10): # Run 10 rounds of trials
    # We will request three trials at a time in this example
    trials = client.get_next_trials(max_trials=3)

    for trial_index, parameters in trials.items():
        x1 = parameters["x1"]
        x2 = parameters["x2"]
        x3 = parameters["x3"]
        x4 = parameters["x4"]
        x5 = parameters["x5"]
        x6 = parameters["x6"]

        result = hartmann6(x1, x2, x3, x4, x5, x6)

        # Set raw_data as a dictionary with metric names as keys and results as values
        raw_data = {metric_name: result}

        # Complete the trial with the result
        client.complete_trial(trial_index=trial_index, raw_data=raw_data)
```

<CellOutput>
{
`[INFO 06-04 15:50:44] ax.api.client: GenerationStrategy(name='Center+Sobol+MBM:fast', nodes=[CenterGenerationNode(next_node_name='Sobol', use_existing_trials_for_initialization=True), GenerationNode(name='Sobol', generator_specs=[GeneratorSpec(generator_enum=Sobol, generator_key_override=None)], transition_criteria=[MinTrials(transition_to='MBM'), MinTrials(transition_to='MBM')], suggested_experiment_status=ExperimentStatus.INITIALIZATION, pausing_criteria=[MaxTrialsAwaitingData(threshold=5)]), GenerationNode(name='MBM', generator_specs=[GeneratorSpec(generator_enum=BoTorch, generator_key_override=None)], transition_criteria=None, suggested_experiment_status=ExperimentStatus.OPTIMIZATION, pausing_criteria=None)]) chosen based on user input and problem structure.
[INFO 06-04 15:50:44] ax.api.client: Generated new trial 0 with parameters {'x1': 0.5, 'x2': 0.5, 'x3': 0.5, 'x4': 0.5, 'x5': 0.5, 'x6': 0.5} using GenerationNode CenterOfSearchSpace.
[INFO 06-04 15:50:44] ax.api.client: Generated new trial 1 with parameters {'x1': 0.020579, 'x2': 0.884746, 'x3': 0.133361, 'x4': 0.702749, 'x5': 0.756916, 'x6': 0.888466} using GenerationNode Sobol.
[INFO 06-04 15:50:44] ax.api.client: Generated new trial 2 with parameters {'x1': 0.808906, 'x2': 0.209432, 'x3': 0.936627, 'x4': 0.340429, 'x5': 0.494998, 'x6': 0.393271} using GenerationNode Sobol.
[INFO 06-04 15:50:44] ax.api.client: Trial 0 marked COMPLETED.
[INFO 06-04 15:50:44] ax.api.client: Trial 1 marked COMPLETED.
[INFO 06-04 15:50:44] ax.api.client: Trial 2 marked COMPLETED.
[INFO 06-04 15:50:45] ax.api.client: Generated new trial 3 with parameters {'x1': 0.592856, 'x2': 0.572413, 'x3': 0.458472, 'x4': 0.961859, 'x5': 0.009625, 'x6': 0.084018} using GenerationNode Sobol.
[INFO 06-04 15:50:45] ax.api.client: Generated new trial 4 with parameters {'x1': 0.365566, 'x2': 0.271154, 'x3': 0.721609, 'x4': 0.074179, 'x5': 0.73846, 'x6': 0.571745} using GenerationNode Sobol.
[WARNING 06-04 15:50:45] ax.api.client: 3 trials requested but only 2 could be generated.
[INFO 06-04 15:50:45] ax.api.client: Trial 3 marked COMPLETED.
[INFO 06-04 15:50:45] ax.api.client: Trial 4 marked COMPLETED.
[INFO 06-04 15:50:45] ax.api.client: Generated new trial 5 with parameters {'x1': 0.488092, 'x2': 0.455549, 'x3': 0.258632, 'x4': 0.160541, 'x5': 0.573825, 'x6': 0.521739} using GenerationNode MBM.
[WARNING 06-04 15:50:45] ax.api.client: 3 trials requested but only 1 could be generated.
[INFO 06-04 15:50:45] ax.api.client: Trial 5 marked COMPLETED.
[INFO 06-04 15:50:46] ax.api.client: Generated new trial 6 with parameters {'x1': 0.440606, 'x2': 0.667358, 'x3': 0.726595, 'x4': 0.704015, 'x5': 0.610578, 'x6': 0.516446} using GenerationNode MBM.
[INFO 06-04 15:50:46] ax.api.client: Generated new trial 7 with parameters {'x1': 0.452644, 'x2': 0.256627, 'x3': 0.590817, 'x4': 0.708402, 'x5': 0.281614, 'x6': 0.542662} using GenerationNode MBM.
[INFO 06-04 15:50:46] ax.api.client: Generated new trial 8 with parameters {'x1': 0.474725, 'x2': 0.343761, 'x3': 0.524689, 'x4': 0.821182, 'x5': 0.831946, 'x6': 0.447727} using GenerationNode MBM.
[INFO 06-04 15:50:46] ax.api.client: Trial 6 marked COMPLETED.
[INFO 06-04 15:50:46] ax.api.client: Trial 7 marked COMPLETED.
[INFO 06-04 15:50:46] ax.api.client: Trial 8 marked COMPLETED.
[INFO 06-04 15:50:48] ax.api.client: Generated new trial 9 with parameters {'x1': 0.480692, 'x2': 0.35274, 'x3': 0.452341, 'x4': 0.395785, 'x5': 0.402739, 'x6': 0.520915} using GenerationNode MBM.
[INFO 06-04 15:50:48] ax.api.client: Generated new trial 10 with parameters {'x1': 0.60153, 'x2': 0.553987, 'x3': 0.341978, 'x4': 0.489895, 'x5': 0.40249, 'x6': 0.530272} using GenerationNode MBM.
[INFO 06-04 15:50:48] ax.api.client: Generated new trial 11 with parameters {'x1': 0.410776, 'x2': 0.303838, 'x3': 0.500786, 'x4': 0.351526, 'x5': 0.498057, 'x6': 0.293936} using GenerationNode MBM.
[INFO 06-04 15:50:48] ax.api.client: Trial 9 marked COMPLETED.
[INFO 06-04 15:50:48] ax.api.client: Trial 10 marked COMPLETED.
[INFO 06-04 15:50:48] ax.api.client: Trial 11 marked COMPLETED.
[INFO 06-04 15:50:50] ax.api.client: Generated new trial 12 with parameters {'x1': 0.266903, 'x2': 0.419926, 'x3': 0.195159, 'x4': 0.406208, 'x5': 0.404237, 'x6': 0.457509} using GenerationNode MBM.
[INFO 06-04 15:50:50] ax.api.client: Generated new trial 13 with parameters {'x1': 0.536829, 'x2': 0.276494, 'x3': 0.561076, 'x4': 0.406093, 'x5': 0.299932, 'x6': 0.837614} using GenerationNode MBM.
[INFO 06-04 15:50:50] ax.api.client: Generated new trial 14 with parameters {'x1': 0.733334, 'x2': 0.457698, 'x3': 0.544494, 'x4': 0.404762, 'x5': 0.507393, 'x6': 0.212579} using GenerationNode MBM.
[INFO 06-04 15:50:50] ax.api.client: Trial 12 marked COMPLETED.
[INFO 06-04 15:50:50] ax.api.client: Trial 13 marked COMPLETED.
[INFO 06-04 15:50:50] ax.api.client: Trial 14 marked COMPLETED.
[INFO 06-04 15:50:51] ax.api.client: Generated new trial 15 with parameters {'x1': 0.43639, 'x2': 0.30736, 'x3': 0.437327, 'x4': 0.394262, 'x5': 0.332274, 'x6': 0.701498} using GenerationNode MBM.
[INFO 06-04 15:50:51] ax.api.client: Generated new trial 16 with parameters {'x1': 0.44313, 'x2': 0.073793, 'x3': 0.511183, 'x4': 0.403316, 'x5': 0.143692, 'x6': 0.671863} using GenerationNode MBM.
[INFO 06-04 15:50:51] ax.api.client: Generated new trial 17 with parameters {'x1': 0.454763, 'x2': 0.523363, 'x3': 0.45199, 'x4': 0.391731, 'x5': 0.545891, 'x6': 0.724946} using GenerationNode MBM.
[INFO 06-04 15:50:51] ax.api.client: Trial 15 marked COMPLETED.
[INFO 06-04 15:50:51] ax.api.client: Trial 16 marked COMPLETED.
[INFO 06-04 15:50:51] ax.api.client: Trial 17 marked COMPLETED.
[INFO 06-04 15:50:53] ax.api.client: Generated new trial 18 with parameters {'x1': 0.309812, 'x2': 0.259535, 'x3': 0.339121, 'x4': 0.35819, 'x5': 0.298135, 'x6': 0.669461} using GenerationNode MBM.
[INFO 06-04 15:50:53] ax.api.client: Generated new trial 19 with parameters {'x1': 0.393315, 'x2': 0.230117, 'x3': 0.008182, 'x4': 0.381595, 'x5': 0.318446, 'x6': 0.67399} using GenerationNode MBM.
[INFO 06-04 15:50:53] ax.api.client: Generated new trial 20 with parameters {'x1': 0.293627, 'x2': 0.306314, 'x3': 0.694422, 'x4': 0.359678, 'x5': 0.274093, 'x6': 0.663754} using GenerationNode MBM.
[INFO 06-04 15:50:53] ax.api.client: Trial 18 marked COMPLETED.
[INFO 06-04 15:50:53] ax.api.client: Trial 19 marked COMPLETED.
[INFO 06-04 15:50:53] ax.api.client: Trial 20 marked COMPLETED.
[INFO 06-04 15:50:54] ax.api.client: Generated new trial 21 with parameters {'x1': 0.246129, 'x2': 0.165502, 'x3': 0.364195, 'x4': 0.262287, 'x5': 0.282776, 'x6': 0.737656} using GenerationNode MBM.
[INFO 06-04 15:50:54] ax.api.client: Generated new trial 22 with parameters {'x1': 0.256903, 'x2': 0.40687, 'x3': 0.322334, 'x4': 0.256632, 'x5': 0.25258, 'x6': 0.731705} using GenerationNode MBM.
[INFO 06-04 15:50:54] ax.api.client: Generated new trial 23 with parameters {'x1': 0.212457, 'x2': 0.0, 'x3': 0.390219, 'x4': 0.330801, 'x5': 0.300039, 'x6': 0.750909} using GenerationNode MBM.
[INFO 06-04 15:50:54] ax.api.client: Trial 21 marked COMPLETED.
[INFO 06-04 15:50:54] ax.api.client: Trial 22 marked COMPLETED.
[INFO 06-04 15:50:54] ax.api.client: Trial 23 marked COMPLETED.
[INFO 06-04 15:50:55] ax.api.client: Generated new trial 24 with parameters {'x1': 0.154506, 'x2': 0.165661, 'x3': 0.422149, 'x4': 0.313982, 'x5': 0.319362, 'x6': 0.727342} using GenerationNode MBM.
[INFO 06-04 15:50:55] ax.api.client: Generated new trial 25 with parameters {'x1': 0.211537, 'x2': 0.125381, 'x3': 0.421408, 'x4': 0.246292, 'x5': 0.302979, 'x6': 0.62967} using GenerationNode MBM.
[INFO 06-04 15:50:55] ax.api.client: Generated new trial 26 with parameters {'x1': 0.118441, 'x2': 0.179222, 'x3': 0.369528, 'x4': 0.368145, 'x5': 0.282387, 'x6': 0.815402} using GenerationNode MBM.
[INFO 06-04 15:50:55] ax.api.client: Trial 24 marked COMPLETED.
[INFO 06-04 15:50:55] ax.api.client: Trial 25 marked COMPLETED.
[INFO 06-04 15:50:55] ax.api.client: Trial 26 marked COMPLETED.`
}
</CellOutput>

## Step 6: Analyze Results

After running trials, you can analyze the results. Most commonly this means extracting
the parameterization from the best performing trial you conducted.

Hartmann6 has a known global minimum of $f(x*) = -3.322$ at
$x* = (0.201, 0.150, 0.477, 0.273, 0.312, 0.657)$. Ax is able to identify a point very
near to this true optimum **using just 30 evaluations.** This is possible due to the
sample-efficiency of [Bayesian optimization](../../intro-to-bo), the optimization method
we use under the hood in Ax.

```python
best_parameters, prediction, index, name = client.get_best_parameterization()
print("Best Parameters:", best_parameters)
print("Prediction (mean, variance):", prediction)
```

<CellOutput>
{
`Best Parameters: {'x1': 0.24612887663588665, 'x2': 0.16550237150841404, 'x3': 0.364195416367003, 'x4': 0.2622872529751592, 'x5': 0.2827757888246428, 'x6': 0.7376564132727982}
Prediction (mean, variance): {'hartmann6': (np.float64(-3.0160893567759377), np.float64(0.003971444713483267))}`
}
</CellOutput>

## Step 7: Compute Analyses

Ax can also produce a number of analyses to help interpret the results of the experiment
via `client.compute_analyses`. Users can manually select which analyses to run, or can
allow Ax to select which would be most relevant. In this case Ax selects the following:

- **Arm Effects Plots** show the metric value for each
  [arm](https://ax.dev/docs/next/glossary#arm) on the experiment. Ax produces one plot
  using values from its internal surrogate model (this can be helpful for seeing the
  true effect of an arm when evaluations are noisy) and another using the raw metric
  values as observed.
- **Summary** lists all trials generated along with their parameterizations,
  observations, and miscellaneous metadata
- **Sensitivity Analysis Plot** shows which parameters have the largest affect on the
  objective using
  [Sobol Indicies](https://en.wikipedia.org/wiki/Variance-based_sensitivity_analysis)
- **Slice Plot** shows how the model predicts a single parameter effects the objective
  along with a confidence interval
- **Contour Plot** shows how the model predicts a pair of parameters effects the
  objective as a 2D surface
- **Cross Validation** helps to visualize how well the surrogate model is able to
  predict out of sample points

```python
# display=True instructs Ax to sort then render the resulting analyses
cards = client.compute_analyses(display=True)
```

**Modeled Arm Effects on hartmann6**

Modeled effects on hartmann6. This plot visualizes predictions of the true metric
changes for each arm based on Ax's model. This is the expected delta you would expect if
you (re-)ran that arm. This plot helps in anticipating the outcomes and performance of
arms based on the model's predictions. Note, flat predictions across arms indicate that
the model predicts that there is no effect, meaning if you were to re-run the
experiment, the delta you would see would be small and fall within the confidence
interval indicated in the plot.



<PlotlyFigure data={require('./assets/plot_data/87f9f8ba-1674-4fd5-9789-2dee8bd031ab.json')} />


**Observed Arm Effects on hartmann6**

Observed effects on hartmann6. This plot visualizes the effects from previously-run arms
on a specific metric, providing insights into their performance. This plot allows one to
compare and contrast the effectiveness of different arms, highlighting which
configurations have yielded the most favorable outcomes.



<PlotlyFigure data={require('./assets/plot_data/d63b8cd2-64db-46d9-92d3-463ff5005e09.json')} />


**Utility Progression**

Shows the best hartmann6 value achieved so far across completed trials (objective is to
minimize). The x-axis shows trial index. Only completed or early-stopped trials with
complete metric data are included, so there may be gaps if some trials failed, were
abandoned, or have incomplete data. The y-axis shows cumulative best utility. Only
improvements are plotted, so flat segments indicate trials that didn't surpass the
previous best. Infeasible trials (violating outcome constraints) don't contribute to the
improvements.



<PlotlyFigure data={require('./assets/plot_data/d88a213e-920d-4ad7-a8c9-743b459b870d.json')} />


**Best Trial for Experiment**

Displays the trial with the best objective value based on raw observations. This
reflects actual measured performance during execution. This trial achieved the optimal
objective value and represents the recommended configuration for your optimization goal.
Only considering COMPLETED trials.




|    |   trial_index |   arm_name | trial_status   | generation_node   |   hartmann6 |       x1 |       x2 |       x3 |       x4 |       x5 |      x6 |
|---:|--------------:|-----------:|:---------------|:------------------|------------:|---------:|---------:|---------:|---------:|---------:|--------:|
|  0 |            25 |       25_0 | COMPLETED      | MBM               |    -3.23671 | 0.211537 | 0.125381 | 0.421408 | 0.246292 | 0.302979 | 0.62967 |


**Summary for Experiment**

High-level summary of the `Trial`-s in this `Experiment`




|    |   trial_index |   arm_name | trial_status   | generation_node     |   hartmann6 |       x1 |       x2 |       x3 |       x4 |       x5 |       x6 |
|---:|--------------:|-----------:|:---------------|:--------------------|------------:|---------:|---------:|---------:|---------:|---------:|---------:|
|  0 |             0 |        0_0 | COMPLETED      | CenterOfSearchSpace |   -0.505315 | 0.5      | 0.5      | 0.5      | 0.5      | 0.5      | 0.5      |
|  1 |             1 |        1_0 | COMPLETED      | Sobol               |   -0.002154 | 0.020579 | 0.884746 | 0.133361 | 0.702749 | 0.756916 | 0.888466 |
|  2 |             2 |        2_0 | COMPLETED      | Sobol               |   -0.181245 | 0.808906 | 0.209432 | 0.936627 | 0.340429 | 0.494998 | 0.393271 |
|  3 |             3 |        3_0 | COMPLETED      | Sobol               |   -0.173963 | 0.592856 | 0.572413 | 0.458472 | 0.961859 | 0.009625 | 0.084018 |
|  4 |             4 |        4_0 | COMPLETED      | Sobol               |   -0.396808 | 0.365566 | 0.271154 | 0.721609 | 0.074179 | 0.73846  | 0.571745 |
|  5 |             5 |        5_0 | COMPLETED      | MBM                 |   -0.409109 | 0.488092 | 0.455549 | 0.258632 | 0.160541 | 0.573825 | 0.521739 |
|  6 |             6 |        6_0 | COMPLETED      | MBM                 |   -0.117574 | 0.440606 | 0.667358 | 0.726595 | 0.704015 | 0.610578 | 0.516446 |
|  7 |             7 |        7_0 | COMPLETED      | MBM                 |   -0.395018 | 0.452644 | 0.256627 | 0.590817 | 0.708402 | 0.281614 | 0.542662 |
|  8 |             8 |        8_0 | COMPLETED      | MBM                 |   -0.038712 | 0.474725 | 0.343761 | 0.524689 | 0.821182 | 0.831946 | 0.447727 |
|  9 |             9 |        9_0 | COMPLETED      | MBM                 |   -1.45976  | 0.480692 | 0.35274  | 0.452341 | 0.395785 | 0.402739 | 0.520915 |
| 10 |            10 |       10_0 | COMPLETED      | MBM                 |   -0.578473 | 0.60153  | 0.553987 | 0.341978 | 0.489895 | 0.40249  | 0.530272 |
| 11 |            11 |       11_0 | COMPLETED      | MBM                 |   -0.573929 | 0.410776 | 0.303838 | 0.500786 | 0.351526 | 0.498057 | 0.293936 |
| 12 |            12 |       12_0 | COMPLETED      | MBM                 |   -1.20104  | 0.266903 | 0.419926 | 0.195159 | 0.406208 | 0.404237 | 0.457509 |
| 13 |            13 |       13_0 | COMPLETED      | MBM                 |   -1.55358  | 0.536829 | 0.276494 | 0.561076 | 0.406093 | 0.299932 | 0.837614 |
| 14 |            14 |       14_0 | COMPLETED      | MBM                 |   -0.141116 | 0.733334 | 0.457698 | 0.544494 | 0.404762 | 0.507393 | 0.212579 |
| 15 |            15 |       15_0 | COMPLETED      | MBM                 |   -2.20731  | 0.43639  | 0.30736  | 0.437327 | 0.394262 | 0.332274 | 0.701498 |
| 16 |            16 |       16_0 | COMPLETED      | MBM                 |   -1.50027  | 0.44313  | 0.073793 | 0.511183 | 0.403316 | 0.143692 | 0.671863 |
| 17 |            17 |       17_0 | COMPLETED      | MBM                 |   -0.600709 | 0.454763 | 0.523363 | 0.45199  | 0.391731 | 0.545891 | 0.724946 |
| 18 |            18 |       18_0 | COMPLETED      | MBM                 |   -2.80559  | 0.309812 | 0.259535 | 0.339121 | 0.35819  | 0.298135 | 0.669461 |
| 19 |            19 |       19_0 | COMPLETED      | MBM                 |   -2.02692  | 0.393315 | 0.230117 | 0.008182 | 0.381595 | 0.318446 | 0.67399  |
| 20 |            20 |       20_0 | COMPLETED      | MBM                 |   -2.4009   | 0.293627 | 0.306314 | 0.694422 | 0.359678 | 0.274093 | 0.663754 |
| 21 |            21 |       21_0 | COMPLETED      | MBM                 |   -3.0212   | 0.246129 | 0.165502 | 0.364195 | 0.262287 | 0.282776 | 0.737656 |
| 22 |            22 |       22_0 | COMPLETED      | MBM                 |   -2.26249  | 0.256903 | 0.40687  | 0.322334 | 0.256632 | 0.25258  | 0.731705 |
| 23 |            23 |       23_0 | COMPLETED      | MBM                 |   -2.76067  | 0.212457 | 0        | 0.390219 | 0.330801 | 0.300039 | 0.750909 |
| 24 |            24 |       24_0 | COMPLETED      | MBM                 |   -3.09828  | 0.154506 | 0.165661 | 0.422149 | 0.313982 | 0.319362 | 0.727342 |
| 25 |            25 |       25_0 | COMPLETED      | MBM                 |   -3.23671  | 0.211537 | 0.125381 | 0.421408 | 0.246292 | 0.302979 | 0.62967  |
| 26 |            26 |       26_0 | COMPLETED      | MBM                 |   -2.37584  | 0.118441 | 0.179222 | 0.369528 | 0.368145 | 0.282387 | 0.815402 |


**Sensitivity Analysis for hartmann6**

Understand how each parameter affects hartmann6 according to a second-order sensitivity
analysis.



<PlotlyFigure data={require('./assets/plot_data/f849afd0-8cc4-4849-bb67-ed0121c86f20.json')} />


**hartmann6 (Mean) vs. x4, x5**

The contour plot visualizes the predicted outcomes for hartmann6 across a
two-dimensional parameter space, with other parameters held fixed at their best trial
value (Arm 21_0). This plot helps in identifying regions of optimal performance and
understanding how changes in the selected parameters influence the predicted outcomes.
Contour lines represent levels of constant predicted values, providing insights into the
gradient and potential optima within the parameter space.



<PlotlyFigure data={require('./assets/plot_data/ef49b6a5-a41f-4cec-9e60-5bd734fca135.json')} />


**hartmann6 (Mean) vs. x4, x6**

The contour plot visualizes the predicted outcomes for hartmann6 across a
two-dimensional parameter space, with other parameters held fixed at their best trial
value (Arm 21_0). This plot helps in identifying regions of optimal performance and
understanding how changes in the selected parameters influence the predicted outcomes.
Contour lines represent levels of constant predicted values, providing insights into the
gradient and potential optima within the parameter space.



<PlotlyFigure data={require('./assets/plot_data/eaf61f27-d09b-4423-89c0-0b68993046b7.json')} />


**hartmann6 (Mean) vs. x2, x4**

The contour plot visualizes the predicted outcomes for hartmann6 across a
two-dimensional parameter space, with other parameters held fixed at their best trial
value (Arm 21_0). This plot helps in identifying regions of optimal performance and
understanding how changes in the selected parameters influence the predicted outcomes.
Contour lines represent levels of constant predicted values, providing insights into the
gradient and potential optima within the parameter space.



<PlotlyFigure data={require('./assets/plot_data/275bec7c-03e5-40ce-aef8-ed40b7954d64.json')} />


**Cross Validation for hartmann6 (R² = 0.95)**

The cross-validation plot displays the model fit for each metric in the experiment. It
employs a leave-one-out approach, where the model is trained on all data except one
sample, which is used for validation. The plot shows the predicted outcome for the
validation set on the y-axis against its actual value on the x-axis. Points that align
closely with the dotted diagonal line indicate a strong model fit, signifying accurate
predictions. Additionally, the plot includes 95% confidence intervals that provide
insight into the noise in observations and the uncertainty in model predictions. A
horizontal, flat line of predictions indicates that the model has not picked up on
sufficient signal in the data, and instead is just predicting the mean.



<PlotlyFigure data={require('./assets/plot_data/0ec98357-61fc-4a5b-bf20-0ef3cb8f6626.json')} />


**Summary of model fits**

R² (coefficient of determination) measures how well the model predicts each metric.
Higher values indicate better model fit. Metrics with R² >= 0.1 are highlighted in
green.



<PlotlyFigure data={require('./assets/plot_data/64e1831c-791b-4267-b662-cfc928725e9c.json')} />


**Generation Strategy Graph**

GenerationStrategy: Center+Sobol+MBM:fast

Visualize the structure of a GenerationStrategy as a directed graph. Each node
represents a GenerationNode in the strategy, and edges represent transitions between
nodes based on TransitionCriterion. Edge labels show the criterion class names that
trigger the transition.




|    | node_name           | generators   | transitions                        | is_current   |
|---:|:--------------------|:-------------|:-----------------------------------|:-------------|
|  0 | CenterOfSearchSpace | nan          | -> Sobol: AutoTransitionAfterGen   | False        |
|  1 | Sobol               | Sobol        | -> MBM: MinTrials(5), MinTrials(2) | False        |
|  2 | MBM                 | BoTorch      | nan                                | True         |


**Baseline Improvement Healthcheck**

All 1 objective(s) improved over baseline.

**Metric `hartmann6` improved -540.53%** from `-0.51` in arm `'0_0'` to `-3.24` in arm
`'25_0'`.

**Note:** Using the first trial's first arm ('0_0') as the baseline since no explicit
baseline was provided.




|    | Metric    | Status   | Details                                           |
|---:|:----------|:---------|:--------------------------------------------------|
|  0 | hartmann6 | Improved | **Metric `hartmann6` improved -540.53%** from ... |

## Conclusion

This tutorial demonstrates how to use Ax's `Client` for ask-tell optimization of Python
functions using the Hartmann6 function as an example. You can adjust the function and
parameters to suit your specific optimization problem.

